--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
             {%- endif -%}
             </li>
             {%- if site.email -%}
-            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+            <li><span class="u-email">{{ site.email }}</span></li>
             {%- endif -%}
         </ul>
       </div>
