--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,8 @@
 
     {%- include header.html -%}
 
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
+    <main class="page-content wrapper" aria-label="Content">
+      <div class="container">
         {{ content }}
       </div>
     </main>
