--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -10,11 +10,11 @@ $base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
 
-$text-color:       #111 !default;
-$background-color: #fdfdfd !default;
+$text-color:       #222 !default;
+$background-color: #ffe6e6 !default;
 $brand-color:      #2a7ae2 !default;
 
-$grey-color:       #828282 !default;
+$grey-color:       #868080 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
 $grey-color-dark:  darken($grey-color, 25%) !default;
 
@@ -25,6 +25,7 @@ $content-width:    800px !default;
 
 $on-palm:          600px !default;
 $on-laptop:        800px !default;
+$on-fullscreen:    1400px !default;
 
 // Use media queries like this:
 // @include media-query($on-palm) {
@@ -49,3 +50,124 @@ $on-laptop:        800px !default;
   "minima/layout",
   "minima/syntax-highlighting"
 ;
+
+body, h1, h2, h3, h4, h5, h6,
+p, blockquote, pre, hr,
+dl, dd, ol, ul, figure {
+  box-sizing: border-box;
+}
+
+.page-content {
+    padding: -webkit-calc(#{$spacing-unit} / 2);
+    padding:         calc(#{$spacing-unit} / 2);
+}
+
+.wrapper {
+  max-width: 1240px;
+  width: 100%;
+
+  @include media-query($on-fullscreen) {
+    width: -webkit-calc(100% - (#{$spacing-unit} * 4));
+    width:         calc(100% - (#{$spacing-unit} * 4));
+  }
+
+  @include media-query($on-laptop) {
+    width: -webkit-calc(100% - (#{$spacing-unit} * 2));
+    width:         calc(100% - (#{$spacing-unit} * 2));
+  }
+}
+
+main {
+  margin: 0 auto;
+  background: #fff;
+  box-shadow: 0 0 10px #0000001f;
+}
+
+.container {
+  margin-bottom: 1em;
+  padding: 10px;
+  background: #fff6f6;
+  border-top: 1px solid #fff6f6;
+  border-bottom: 1px solid #fff6f6;
+  border-radius: 5px;
+  min-height: auto;
+
+  display: flex;
+  flex-direction: row;
+  gap: -webkit-calc(#{$spacing-unit} / 2);
+  gap:         calc(#{$spacing-unit} / 2);
+
+  @include media-query($on-laptop) {
+    flex-direction: column;
+  }
+}
+
+// h1,
+// h2,
+// h3 {
+//   margin-bottom: 10px;
+// }
+
+// h1 {
+//   font-size: 2em;
+//   color: #222;
+// }
+
+// h2 {
+//   font-size: 1.5em;
+//   color: #333;
+// }
+
+// h3 {
+//   font-size: 1.2em;
+//   color: #444;
+// }
+
+// p {
+//   margin-bottom: 1em;
+// }
+
+// a {
+//   text-decoration: none;
+//   color: inherit;
+// }
+
+// ul {
+//   margin-bottom: 1em;
+//   padding-left: 20px;
+//   list-style-type: disc;
+// }
+
+// li {
+//   margin-bottom: 5px;
+// }
+
+
+// .left,
+// .right {
+//   padding: 20px;
+//   box-sizing: border-box;
+// }
+
+// .left {
+//   background-color: #fff6f6;
+// }
+
+// .right {
+//   background-color: #fff;
+//   border-top: 2px solid #ccc;
+//   border-bottom: 0.1px solid #fff;
+// }
+
+// @media (min-width: 800px) {
+
+//   .left {
+//     width: 30%;
+//   }
+
+//   .right {
+//     width: 70%;
+//     border-left: 2px solid #ccc;
+//     border-top: none;
+//   }
+// }
